=== HEAD

* Add Dataset#paged_each :strategy=>:cursor option in the postgres adapter (jeremyevans)

* Add Dataset#paged_each :strategy=>:filter option for increased performance (jeremyevans)

=== 4.8.0 (2014-03-01)

* Add SQL::AliasedExpression#alias alias for #aliaz (jeremyevans)

* Handle SQL::Identifier, SQL::QualifiedIdentifier, and SQL::AliasedExpression objects as first argument to Dataset#graph (jeremyevans)

* Respect qualification and aliases in symbols passed as first argument to Dataset#graph (dividedmind) (#769)

* Recognize new constraint violation error messages in SQLite 3.8.2+ (itswindtw) (#766)

* Use limit strategy to correctly handle limited associations in the dataset_associations plugin (jeremyevans)

* Handle issues in dataset_associations plugin when dataset uses unqualified identifiers for associations requiring joins (jeremyevans)

* Handle fractional seconds in input timestamps in the odbc/mssql adapter (Ross Attrill, jeremyevans)

* Return fractional seconds in timestamps in the odbc adapter (jeremyevans)

* Support :plain and :phrase options to Dataset#full_text_search on PostgreSQL (jeremyevans)

* Use limit strategy to correctly handle filtering by limited associations (jeremyevans)

* Simplify queries used for filtering by associations with conditions (jeremyevans)

* Use an eager limit strategy by default for *_one associations with orders (jeremyevans)

* Support :limit_strategy eager_graph option, for specifying strategy used for limited associations in that eager graph (jeremyevans)

* Add eager_graph_with_options to model datasets, for specifying options specific to the eager_graph call (jeremyevans)

* Handle offsets on *_many associations when eager graphing when there are no associated results (jeremyevans)

* Make Database#register_array_type work without existing scalar conversion proc in the pg_array extension (jeremyevans)
